<resources>
    <string name="app_name">GO SOPT Android with JaewonSeo</string>
    <string name="welcome_comment">Welcome to GO Android!</string>
    <string name="login">LOGIN</string>
    <string name="name">이름</string>
    <string name="specialty">특기</string>
    <string name="signup">SIGN UP</string>
    <string name="singup_compelete">회원가입 완료</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="input_id">아이디를 입력하세요</string>
    <string name="input_pw">비밀번호를 입력하세요</string>
    <string name="input_name">이름을 입력하세요</string>
    <string name="input_specialty">특기를 입력하세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>