<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textview_signup_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_signup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="left"
        android:text="ID"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_title"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_title" />

    <EditText
        android:id="@+id/edittext_signup_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="아이디를 입력하세요"
        app:layout_constraintEnd_toEndOf="@+id/textview_signup_title"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_id" />

    <TextView
        android:id="@+id/textview_signup_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="PW"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_id" />

    <EditText
        android:id="@+id/edittext_signup_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="비밀번호를 입력하세요"
        app:layout_constraintEnd_toEndOf="@+id/edittext_signup_id"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_pw"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_pw"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textview_signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_pw" />

    <EditText
        android:id="@+id/edittext_signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="이름을 입력하세요"
        app:layout_constraintEnd_toEndOf="@+id/edittext_signup_id"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_pw"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textview_signup_specialty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/specialty"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_id"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_name" />

    <EditText
        android:id="@+id/edittext_signup_specialty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="특기를 입력하세요"
        app:layout_constraintEnd_toEndOf="@+id/edittext_signup_id"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_pw"
        app:layout_constraintTop_toBottomOf="@+id/textview_signup_specialty"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_signup_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/singup_compelete"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/textview_signup_title"
        app:layout_constraintEnd_toEndOf="@id/textview_signup_title"
        app:layout_constraintTop_toBottomOf="@+id/edittext_signup_specialty" />

</androidx.constraintlayout.widget.ConstraintLayout>