<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:text="@string/welcome_comment"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_main_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="left"
        android:text="ID"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textview_main_title"
        app:layout_constraintTop_toBottomOf="@+id/textview_main_title" />

    <EditText
        android:id="@+id/edittext_main_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="아이디를 입력하세요"
        app:layout_constraintEnd_toEndOf="@+id/textview_main_title"
        app:layout_constraintStart_toStartOf="@+id/textview_main_id"
        app:layout_constraintTop_toBottomOf="@+id/textview_main_id" />

    <TextView
        android:id="@+id/textview_main_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="PW"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textview_main_id"
        app:layout_constraintTop_toBottomOf="@+id/edittext_main_id" />

    <EditText
        android:id="@+id/edittext_main_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="비밀번호를 입력하세요"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edittext_main_id"
        app:layout_constraintStart_toStartOf="@+id/textview_main_pw"
        app:layout_constraintTop_toBottomOf="@+id/textview_main_pw"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_main_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="20dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/edittext_main_pw"
        app:layout_constraintStart_toStartOf="@+id/edittext_main_pw"
        app:layout_constraintTop_toBottomOf="@+id/edittext_main_pw" />

    <Button
        android:id="@+id/button_main_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingVertical="20dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@+id/edittext_main_pw"
        app:layout_constraintStart_toStartOf="@+id/edittext_main_pw"
        app:layout_constraintTop_toBottomOf="@+id/button_main_login" />

</androidx.constraintlayout.widget.ConstraintLayout>